Day 1 (2024-01-28)
    - Set up project
    - Wrote Makefile and CHANGELOG

Day 2 (2024-01-29)
    - Completed basic version of coloring.c
    - Started working on output in main.c