@@ -1,0 +1,6 @@
+#include "../../include/world/mapbuilder.h"
+#include "../../include/utils/mathematics.h"
+
+void initializeMap(Map *map) {
+
+}
